--- a/.github/ISSUE_TEMPLATE/기술-영상-스터디-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기술-영상-스터디-템플릿.md
@@ -1,7 +1,7 @@
 ---
-name: '영상 제목 (ex - jvm 웜업) '
+name: 기술 영상 스터디 템플릿
 about: Describe this issue template's purpose here.
-title: ''
+title: '영상 제목 작성 (ex - jvm 웜업) '
 labels: documentation
 assignees: ''
 
